[package]
name = "kraken"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
serde_tuple = "0.5.0"
rust_decimal = "1.23"
rust_decimal_macros = "1.23"
indexmap = "1.8.1"
